# ghoti-rpg

./: .dockerignore  .gitignore  BLOG.md  CMakeLists.txt  Dockerfile  LICENSE  LICENSE.md  README.md  build.sh  clean-and-regenerate.sh
appimage/: build.sh  ghoti-rpg.desktop  install_manifest.txt  missing_copyrights
desktop-client/: CMakeLists.txt
desktop-client/src/: main.cpp  main.cpp~
game-library/: CMakeLists.txt
game-library/include/: drawable_component.h  game.h  hello_screen.h  input-data.h  input_processor.h  res_path.h  resource_loader.h  screen.h  test-class.h  thread_pool.h
game-library/include/components/: drawable_component.h  tile.h  tile_map.h  tile_set.h
game-library/include/components/drawable-components/: button.h  character.h
game-library/include/components/drawable-components/tiles/: tile-map.h  tile-set.h  tile.h  tile_map.h  tile_set.h
game-library/include/components/primitive-components/: component.h  drawable-component.h  drawable_component.h  rendererable-drawable-component.h  rendererable_drawable_component.h
game-library/include/screens/: game-screen.h  game_screen.h  hello-screen.h  hello_screen.h  load-screen.h  load_screen.h  main-menu-screen.h  main_menu_screen.h  screen.h  video-screen.h
game-library/include/settings/: button-settings.h  button-type.h  main-menu-settings.h
game-library/include/utilities/: input_data.h  input_processor.h  render-queue.h  render_queue.h  resource_loader.h  thread-pool.h  thread_pool.h  thread_safe_renderer.h
game-library/include/utilities/input/: click-event.h  click_event.h  input-data.h  input-processor.h  input_data.h  input_processor.h
game-library/include/utilities/resource/: resource-loader.h  resource_loader.h
game-library/res/: gamecontrollerdb.txt
game-library/res/maps/: test.tmx  test2.tmx
game-library/res/settings/: credits.xml  main-menu.xml  start-sequence.xml
game-library/res/videos/: ghoti-rpg.ogv
game-library/src/: drawable_component.cpp  game.cpp  hello_screen.cpp  input_processor.cpp  resource_loader.cpp  screen.cpp  test-class.cpp  thread_pool.cpp
game-library/src/components/: drawable_component.cpp  tile.cpp  tile_map.cpp  tile_set.cpp
game-library/src/components/drawable-components/: button.cpp  character.cpp
game-library/src/components/drawable-components/tiles/: tile-map.cpp  tile-set.cpp  tile.cpp  tile_map.cpp  tile_set.cpp
game-library/src/components/primitive-components/: component.cpp  drawable-component.cpp  drawable_component.cpp  renderable-drawable-component.cpp  renderable_drawable_component.cpp
game-library/src/screens/: game-screen.cpp  game_screen.cpp  hello-screen.cpp  hello_screen.cpp  load-screen.cpp  load_screen.cpp  main-menu-screen.cpp  main_menu_screen.cpp  screen.cpp  video-screen.cpp
game-library/src/settings/: button-settings.cpp  main-menu-settings.cpp
game-library/src/utilities/: input_processor.cpp  render-queue.cpp  render_queue.cpp  resource_loader.cpp  thread-pool.cpp  thread_pool.cpp  thread_safe_renderer.cpp  tinyxml2.cpp
game-library/src/utilities/input/: input-processor.cpp  input_processor.cpp
game-library/src/utilities/resource/: resource-loader.cpp  resource_loader.cpp  tinyxml2.cpp
